--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/EditorSettingsView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/EditorSettingsView.xaml
@@ -4,7 +4,7 @@
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <Grid hc:ThemeManager.RequestedAccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
-        <hc:SideMenu ExpandMode="ShowOne" Width="150" SideBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Left" >
+        <hc:SideMenu  x:Name="Test"  Width="150" SideBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Left" >
 
             <hc:SideMenuItem x:Name="GeneralSubItem" Selected="GeneralSubItem_Selected" >
                 <hc:SideMenuItem.Header>
