--- a/WolvenKit/MVVM/Views/Shell/Backstage/BackStageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Backstage/BackStageView.xaml
@@ -1,11 +1,10 @@
-<UserControl x:Class="WolvenKit.Views.BackStageView"
+<UserControl x:Class="WolvenKit.MVVM.Views.Shell.Backstage.BackStageView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WolvenKit.Views" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:Fluent="urn:fluent-ribbon" xmlns:catel="http://schemas.catelproject.com"
-             mc:Ignorable="d"                                xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
-
+             mc:Ignorable="d"                                xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" xmlns:local1="clr-namespace:WolvenKit.MVVM.Views.Shell.Backstage"
              d:DesignHeight="450" d:DesignWidth="800">
 
     <UserControl.Resources>
@@ -53,7 +52,7 @@
                 <Border  Effect="{DynamicResource  MahApps.DropShadowEffect.Menu}" CornerRadius="10"  Background="{DynamicResource RegionBrush}" >
                     <Border Margin="1,50,1,15" CornerRadius="10" Background="{DynamicResource MahApps.Brushes.ThemeBackground}">
                         <hc:TransitioningContentControl TransitionMode="Left2RightWithFade">
-                            <local:RecentlyUsedItemsView Margin="5,-56,5,0" FontSize="18" />
+                            <local1:RecentlyUsedItemsView Margin="5,-56,5,0" FontSize="18" />
 
                         </hc:TransitioningContentControl>
 
