--- a/WolvenKit/MVVM/Views/Shell/Backstage/OpenFileView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Backstage/OpenFileView.xaml
@@ -1,19 +1,21 @@
-<catel:UserControl x:Class="WolvenKit.Views.OpenFileView"
-                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-                   xmlns:local="clr-namespace:WolvenKit.Views"
-                   xmlns:global="clr-namespace:WolvenKit"
-                   xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:orchestra="http://schemas.wildgums.com/orchestra"
-                   xmlns:fluent="urn:fluent-ribbon"
-                   xmlns:orccontrols="http://schemas.wildgums.com/orc/controls" 
-                   xmlns:orctheming="http://schemas.wildgums.com/orc/theming"           
-                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+<catel:UserControl
+    x:Class="WolvenKit.MVVM.Views.Shell.Backstage.OpenFileView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"   
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:orchestra="http://schemas.wildgums.com/orchestra"
+    xmlns:fluent="urn:fluent-ribbon"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:local1="clr-namespace:WolvenKit.MVVM.Views.Shell.Backstage"
+    mc:Ignorable="d" 
+    d:DesignHeight="300"
+    d:DesignWidth="300"
+    IsVisibleChanged="UserControl_IsVisibleChanged"
+    ><!--End-->
 
-                   mc:Ignorable="d" 
-                   d:DesignHeight="300" d:DesignWidth="300" IsVisibleChanged="UserControl_IsVisibleChanged">
+    
     <Grid>
         <Grid Style="{DynamicResource InnerBackstageGridStyle}">
             <Grid.RowDefinitions>
@@ -35,7 +37,7 @@
                             </StackPanel>                                
                         </DataTemplate>
                     </orchestra:RibbonBackstageTabItem.HeaderTemplate>
-                    <local:RecentlyUsedItemsView />
+                    <local1:RecentlyUsedItemsView />
                 </orchestra:RibbonBackstageTabItem>
 
                 <orchestra:RibbonBackstageTabItem HeaderText="Computer" 
