--- a/WolvenKit/MVVM/Views/Shell/Editor/LogView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/LogView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.LogView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.Editor.LogView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
