--- a/WolvenKit/MVVM/Views/Shell/Editor/MainView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/MainView.xaml
@@ -1,9 +1,7 @@
-<catel:UserControl x:Class="WolvenKit.Views.MainView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.Editor.MainView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
-                   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                    xmlns:ad="clr-namespace:WolvenKit.Functionality.Layout"
                    xmlns:views2="clr-namespace:WolvenKit.Views.AssetBrowser"
                    xmlns:radishtool="clr-namespace:WolvenKit.Views.RadishTool"
@@ -20,8 +18,8 @@
                    xmlns:csveditor="clr-namespace:WolvenKit.Views.CsvEditor"
                    xmlns:codeeditorz="clr-namespace:WolvenKit.Views.CodeEditor"
                    xmlns:bulkeditor="clr-namespace:WolvenKit.Views.BulkEditor"
-                               xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
-                   xmlns:cr2weditor="clr-namespace:WolvenKit.Views.Editors.CR2WEditor" xmlns:hc="https://handyorg.github.io/handycontrol"
+                   xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+                   xmlns:cr2weditor="clr-namespace:WolvenKit.Views.Editors.CR2WEditor" xmlns:views1="clr-namespace:WolvenKit.MVVM.Views.Shell.Editor"
                    IsVisibleChanged="UserControl_IsVisibleChanged_1"
                    >
 
@@ -73,21 +71,21 @@
                     <!-- DocumentView -->
                     <ad:PanesTemplateSelector.FileViewTemplate>
                         <DataTemplate>
-                            <views:DocumentView />
+                            <views1:DocumentView />
                         </DataTemplate>
                     </ad:PanesTemplateSelector.FileViewTemplate>
                     
                     <!-- LogView -->
                     <ad:PanesTemplateSelector.LogViewTemplate>
                         <DataTemplate>
-                            <views:LogView />
+                            <views1:LogView />
                         </DataTemplate>
                     </ad:PanesTemplateSelector.LogViewTemplate>
                     
                     <!-- ProjectExplorerView -->
                     <ad:PanesTemplateSelector.ProjectExplorerTemplate>
                         <DataTemplate>
-                            <views:ProjectExplorerView/>
+                            <views1:ProjectExplorerView/>
                         </DataTemplate>
                     </ad:PanesTemplateSelector.ProjectExplorerTemplate>
                     
