--- a/WolvenKit/MVVM/Views/Shell/Editor/RibbonView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/RibbonView.xaml
@@ -1,17 +1,13 @@
-<catel:UserControl x:Class="WolvenKit.Views.RibbonView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.Editor.RibbonView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
-                   xmlns:services="clr-namespace:Catel.Services;assembly=Catel.MVVM"
                    xmlns:fluent="urn:fluent-ribbon"
-                   xmlns:local="clr-namespace:WolvenKit"
-                   xmlns:orchestra="http://schemas.wildgums.com/orchestra"
-                   xmlns:orccontrols="http://schemas.wildgums.com/orc/controls"
-                   xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
                    xmlns:views="clr-namespace:WolvenKit.Views"
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                   xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
-                   xmlns:HomeView="clr-namespace:WolvenKit.Views.HomePage" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" IsVisibleChanged="UserControl_IsVisibleChanged">
+                   xmlns:HomeView="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage"
+                   xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls" xmlns:views1="clr-namespace:WolvenKit.MVVM.Views.Shell.Backstage"
+                   IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <!-- Resources -->
     <UserControl.Resources>
@@ -42,8 +38,8 @@
 
             <!-- Backstage -->
             <fluent:Ribbon.Menu >
-                <fluent:Backstage  Margin="70,0,0,0"  x:Name="Backstage" MouseLeftButtonDown="Backstage_MouseLeftButtonDown" >
-                    <views:BackStageView/>
+                <fluent:Backstage  Margin="70,0,0,0"  x:Name="BackstageX" MouseLeftButtonDown="Backstage_MouseLeftButtonDown" >
+                    <views1:BackStageView/>
           
 
                        
