--- a/WolvenKit/MVVM/Views/Shell/HomePage/LandingPageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/LandingPageView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.HomePage.LandingPageView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.LandingPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
                    xmlns:hc="https://handyorg.github.io/handycontrol"
 
