--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/DebugPageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/DebugPageView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.DebugPageView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.DebugPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
                    xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"   
