--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/IntegratedToolsPages/CyberCAT/CyberCATPageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/IntegratedToolsPages/CyberCAT/CyberCATPageView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.IntegratedToolsPages.CyberCAT.CyberCATPageView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.Homepage.Pages.IntegratedToolsPages.CyberCAT.CyberCATPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
