--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPageView.xaml
@@ -1,10 +1,10 @@
-<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"          
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
-                   xmlns:sp="clr-namespace:WolvenKit.Views.SettingsPages"
+                   xmlns:sp="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages"
                    IsVisibleChanged="UserControl_IsVisibleChanged">
 
 
