--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/EditorSettingsView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/EditorSettingsView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.EditorSettingsView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.EditorSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
