--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/GeneralSettingsView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/GeneralSettingsView.xaml
@@ -1,9 +1,9 @@
-<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.GeneralSettingsView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.GeneralSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
-                   xmlns:sp="clr-namespace:WolvenKit.Views.SettingsPages.SubPages.General" 
+                   xmlns:sp="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.SubPages.General" 
                    IsVisibleChanged="UserControl_IsVisibleChanged"
                    >
 
