--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/SubPages/Editor/CompatibilitySubSettingsView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/SubPages/Editor/CompatibilitySubSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.SubPages.Editor.CompatibilitySubSettingsView"
+﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.SubPages.Editor.CompatibilitySubSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
