--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/SubPages/General/GlobalSubSettingsView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/SettingsPages/SubPages/General/GlobalSubSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.SubPages.General.GlobalSubSettingsView"
+﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.SettingsPages.SubPages.General.GlobalSubSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
