--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/WebsitePageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/WebsitePageView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WebsitePageView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.WebsitePageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
