--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/WelcomePageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/WelcomePageView.xaml
@@ -1,10 +1,10 @@
-<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WelcomePageView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.Pages.WelcomePageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
 
-                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:kapow="clr-namespace:WolvenKit.Views.HomePage.Pages"
+                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:kapow="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages"
                    IsVisibleChanged="UserControl_IsVisibleChanged">
     <catel:UserControl.Resources>
         <ResourceDictionary>
