--- a/WolvenKit/MVVM/Views/Shell/HomePage/TopicView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/TopicView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.TopicView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Shell.HomePage.TopicView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" 
@@ -7,7 +7,7 @@
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol" 
                    xmlns:wiz="clr-namespace:WolvenKit.Views.Wizards"
-                   xmlns:pag="clr-namespace:WolvenKit.Views.HomePage.Pages"
+                   xmlns:pag="clr-namespace:WolvenKit.MVVM.Views.Shell.HomePage.Pages"
                    mc:Ignorable="av" >
     
     
