--- a/WolvenKit/MVVM/Views/Components/Wizards/FirstSetupWizardView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/FirstSetupWizardView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.FirstSetupWizardView"
+﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.FirstSetupWizardView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    ViewModelChanged="UserControl_ViewModelChanged"
