--- a/WolvenKit/MVVM/Views/Components/Wizards/ProjectWizardView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/ProjectWizardView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.ProjectWizardView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.ProjectWizardView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" 
@@ -6,7 +6,6 @@
                    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
-                   xmlns:UCpage="clr-namespace:WolvenKit.Views.Wizards.WizardPages.ProjectWizard"
                    mc:Ignorable="av"
                    Tag="Project Wizard"
                    IsVisibleChanged="UserControl_IsVisibleChanged"
