--- a/WolvenKit/MVVM/Views/Components/Wizards/BugReportWizard.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/BugReportWizard.xaml
@@ -1,10 +1,11 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.BugReportWizard"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.BugReportWizard"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
-                   xmlns:wiz="clr-namespace:WolvenKit.Views.Wizards.WizardPages.BugReportWizard" IsVisibleChanged="UserControl_IsVisibleChanged">
+                   xmlns:wiz1="clr-namespace:WolvenKit.MVVM.Views.Components.Wizards.WizardPages.BugReportWizard"
+                   IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <catel:UserControl.Resources>
         <ResourceDictionary>
@@ -40,7 +41,7 @@
 
 
         <Grid x:Name="PageGrid" Grid.Row="1">
-            <wiz:SendBugView></wiz:SendBugView>
+            <wiz1:SendBugView></wiz1:SendBugView>
         </Grid>
 
 
