--- a/WolvenKit/MVVM/Views/Components/Wizards/FeedbackWizardView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/FeedbackWizardView.xaml
@@ -1,7 +1,13 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.FeedbackWizardView"
-                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:rv="clr-namespace:WolvenKit.Views.Wizards.WizardPages.FeedbackWizard" IsVisibleChanged="UserControl_IsVisibleChanged">
+<catel:UserControl
+    x:Class="WolvenKit.MVVM.Views.Components.Wizards.FeedbackWizardView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:catel="http://schemas.catelproject.com"
+    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:rv1="clr-namespace:WolvenKit.MVVM.Views.Components.Wizards.WizardPages.FeedbackWizard"
+    IsVisibleChanged="UserControl_IsVisibleChanged"
+                   >
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -38,7 +44,7 @@
 
 
         <Grid x:Name="PageGrid" Grid.Row="1">
-            <rv:RateView/>
+            <rv1:RateView/>
         </Grid>
 
 
