--- a/WolvenKit/MVVM/Views/Components/Wizards/InstallerWizardView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/InstallerWizardView.xaml
@@ -1,11 +1,11 @@
-﻿<catel:UserControl
-    
-    x:Class="WolvenKit.Views.Wizards.InstallerWizardView"                  
+<catel:UserControl    
+    x:Class="WolvenKit.MVVM.Views.Components.Wizards.InstallerWizardView"                  
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"                 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                
     xmlns:catel="http://schemas.catelproject.com"             
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"              
-    xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    IsVisibleChanged="UserControl_IsVisibleChanged">
 
 
     <catel:UserControl.Resources>
