--- a/WolvenKit/MVVM/Views/Components/Wizards/PublishWizardView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/PublishWizardView.xaml
@@ -1,7 +1,10 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.PublishWizardView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.PublishWizardView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" IsVisibleChanged="UserControl_IsVisibleChanged">
+                   xmlns:catel="http://schemas.catelproject.com"
+                   xmlns:hc="https://handyorg.github.io/handycontrol"
+                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
+                   IsVisibleChanged="UserControl_IsVisibleChanged">
 
 
     <catel:UserControl.Resources>
