--- a/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/FirstSetupWizard/FinalizeSetupView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/FirstSetupWizard/FinalizeSetupView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.FirstSetupWizard.FinalizeSetupView"
+﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.FirstSetupWizard.FinalizeSetupView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
