--- a/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/ProjectWizard/ProjectConfigurationView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/ProjectWizard/ProjectConfigurationView.xaml
@@ -1,6 +1,6 @@
 ﻿<catel:UserControl 
     
-    x:Class="WolvenKit.Views.Wizards.WizardPages.ProjectWizard.ProjectConfigurationView"                   
+    x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.ProjectWizard.ProjectConfigurationView"                   
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"                   
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                   
     xmlns:catel="http://schemas.catelproject.com"                    
