--- a/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/ProjectWizard/SelectProjectTypeView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/ProjectWizard/SelectProjectTypeView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.ProjectWizard.SelectProjectTypeView"
+﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.ProjectWizard.SelectProjectTypeView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:local="clr-namespace:WolvenKit.Model.Wizards"
