--- a/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/PublishWizard/OptionalSettingsView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/PublishWizard/OptionalSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.PublishWizard.OptionalSettingsView"
+﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.PublishWizard.OptionalSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
