--- a/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/PublishWizard/W3PackSettingsView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/PublishWizard/W3PackSettingsView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.WizardPages.PublishWizard.W3PackSettingsView"
+﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.PublishWizard.W3PackSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"              
