--- a/WolvenKit/MVVM/Views/Others/ToolControlHostWindowView.xaml
+++ b/WolvenKit/MVVM/Views/Others/ToolControlHostWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:DataWindow x:Class="WolvenKit.Views.ToolControlHostWindowView"
+<catel:DataWindow x:Class="WolvenKit.MVVM.Views.Others.ToolControlHostWindowView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"
