--- a/WolvenKit/MVVM/Views/Others/UserControlHostWindowView.xaml
+++ b/WolvenKit/MVVM/Views/Others/UserControlHostWindowView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:DataWindow x:Class="WolvenKit.Views.UserControlHostWindowView"
+<catel:DataWindow x:Class="WolvenKit.MVVM.Views.Others.UserControlHostWindowView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com" 
