--- a/WolvenKit/MVVM/Views/Components/Tools/AnimationTool/AnimsView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/AnimationTool/AnimsView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.AnimationTool.AnimsView"
+<catel:UserControl x:Class="WolvenKit.Components.Tools.AnimationTool.AnimsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged" xmlns:hc="https://handyorg.github.io/handycontrol">
