--- a/WolvenKit/MVVM/Views/Components/Tools/AssetBrowser/AssetBrowserView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/AssetBrowser/AssetBrowserView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.AssetBrowser.AssetBrowserView"
+<catel:UserControl x:Class="WolvenKit.Components.Tools.AssetBrowser.AssetBrowserView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
                   xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
