--- a/WolvenKit/MVVM/Views/Components/Tools/RadishTool/RadishToolView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/RadishTool/RadishToolView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.RadishTool.RadishToolView"
+<catel:UserControl x:Class="WolvenKit.Components.Tools.RadishTool.RadishToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
