--- a/WolvenKit/MVVM/Views/Shell/Editor/MainView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Editor/MainView.xaml
@@ -4,14 +4,23 @@
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:ad="clr-namespace:WolvenKit.Functionality.Layout"
                    
-                   xmlns:visualeditorz="clr-namespace:WolvenKit.Views.VisualEditor"
                    xmlns:journaleditor="clr-namespace:WolvenKit.Views.JournalEditor"
                    xmlns:hexeditor="clr-namespace:WolvenKit.Views.HexEditor"
                    xmlns:csveditor="clr-namespace:WolvenKit.Views.CsvEditor"
                    xmlns:codeeditorz="clr-namespace:WolvenKit.Views.CodeEditor"
                    xmlns:bulkeditor="clr-namespace:WolvenKit.Views.BulkEditor"
                    xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
-                   xmlns:cr2weditor="clr-namespace:WolvenKit.Views.Editors.CR2WEditor" xmlns:views1="clr-namespace:WolvenKit.MVVM.Views.Shell.Editor" xmlns:views2="clr-namespace:WolvenKit.Components.Tools.AssetBrowser" xmlns:audiotoolz="clr-namespace:WolvenKit.Components.Tools.AudioTool" xmlns:cr2wtotexttool="clr-namespace:WolvenKit.Components.Tools.CR2WToTextTool" xmlns:gamedebuggertool="clr-namespace:WolvenKit.Components.Tools.GameDebuggerTool" xmlns:importertool="clr-namespace:WolvenKit.Components.Tools.ImporterTool" xmlns:menutool="clr-namespace:WolvenKit.Components.Tools.MenuTool" xmlns:views21="clr-namespace:WolvenKit.Components.Tools.WccTool" xmlns:radishtool="clr-namespace:WolvenKit.Components.Tools.RadishTool" xmlns:pluginmanagerz="clr-namespace:WolvenKit.Components.Tools.PluginManager"
+                   xmlns:cr2weditor="clr-namespace:WolvenKit.Views.Editors.CR2WEditor"
+                   xmlns:views1="clr-namespace:WolvenKit.MVVM.Views.Shell.Editor"
+                   xmlns:views2="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.AssetBrowser"
+                   xmlns:audiotoolz="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.AudioTool"
+                   xmlns:cr2wtotexttool="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.CR2WToTextTool"
+                   xmlns:gamedebuggertool="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.GameDebuggerTool"
+                   xmlns:importertool="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.ImporterTool"
+                   xmlns:menutool="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.MenuTool"
+                   xmlns:views21="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.WccTool"
+                   xmlns:radishtool="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.RadishTool"
+                   xmlns:pluginmanagerz="clr-namespace:WolvenKit.MVVM.Views.Components.Tools.PluginManager" xmlns:visualeditorz="clr-namespace:WolvenKit.MVVM.Views.Components.Editors.VisualEditor"
                    IsVisibleChanged="UserControl_IsVisibleChanged_1"
                    >
 
