--- a/WolvenKit/MVVM/Views/Components/Editors/VisualEditor/Nodes/OUT_Node.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/VisualEditor/Nodes/OUT_Node.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="WolvenKit.Views.Editors.VisualEditor.Nodes.OUT_Node"
+<UserControl x:Class="WolvenKit.MVVM.Views.Components.Editors.VisualEditor.Nodes.OUT_Node"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
