--- a/WolvenKit/MVVM/Views/Components/Editors/VisualEditor/VisualEditorView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/VisualEditor/VisualEditorView.xaml
@@ -1,5 +1,5 @@
 <catel:UserControl 
-    x:Class="WolvenKit.Views.VisualEditor.VisualEditorView"                  
+    x:Class="WolvenKit.MVVM.Views.Components.Editors.VisualEditor.VisualEditorView"                  
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"        
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"        
     xmlns:catel="http://schemas.catelproject.com"           
