--- a/WolvenKit/MVVM/Views/Components/Tools/AnimationTool/MimicsView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/AnimationTool/MimicsView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Components.Tools.AnimationTool.MimicsView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.AnimationTool.MimicsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
