--- a/WolvenKit/MVVM/Views/Components/Tools/AudioTool/AudioToolView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/AudioTool/AudioToolView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Components.Tools.AudioTool.AudioToolView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.AudioTool.AudioToolView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"   
