--- a/WolvenKit/MVVM/Views/Components/Tools/GameDebuggerTool/GameDebuggerToolView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/GameDebuggerTool/GameDebuggerToolView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Components.Tools.GameDebuggerTool.GameDebuggerToolView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.GameDebuggerTool.GameDebuggerToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
