--- a/WolvenKit/MVVM/Views/Components/Tools/MenuTool/MenuCreatorToolView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Tools/MenuTool/MenuCreatorToolView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Components.Tools.MenuTool.MenuCreatorToolView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Tools.MenuTool.MenuCreatorToolView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
