--- a/WolvenKit/MVVM/Views/Components/Editors/BulkEditorView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/BulkEditorView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.BulkEditor.BulkEditorView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Editors.BulkEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
