--- a/WolvenKit/MVVM/Views/Components/Editors/ByteArrayEditorView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/ByteArrayEditorView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.EditorBars.ByteArrayEditorView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Editors.ByteArrayEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
