--- a/WolvenKit/MVVM/Views/Components/Editors/CR2WEditorView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/CR2WEditorView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.Editors.CR2WEditor.CR2WEditorView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Editors.CR2WEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
