--- a/WolvenKit/MVVM/Views/Components/Editors/CsvEditorView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/CsvEditorView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.CsvEditor.CsvEditorView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Editors.CsvEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
