--- a/WolvenKit/MVVM/Views/Components/Editors/HexEditorView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/HexEditorView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.HexEditor.HexEditorView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Editors.HexEditorView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged"
