--- a/WolvenKit/MVVM/Views/Components/Editors/JournalEditorView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Editors/JournalEditorView.xaml
@@ -1,4 +1,4 @@
-<catel:UserControl x:Class="WolvenKit.Views.JournalEditor.JournalEditorView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Editors.JournalEditorView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="DataWindow_IsVisibleChanged"
