--- a/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/ProjectWizard/SelectProjectTypeView.xaml
+++ b/WolvenKit/MVVM/Views/Components/Wizards/WizardPages/ProjectWizard/SelectProjectTypeView.xaml
@@ -1,7 +1,7 @@
-﻿<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.ProjectWizard.SelectProjectTypeView"
+<catel:UserControl x:Class="WolvenKit.MVVM.Views.Components.Wizards.WizardPages.ProjectWizard.SelectProjectTypeView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:local="clr-namespace:WolvenKit.Model.Wizards"
+                   xmlns:local="clr-namespace:WolvenKit.MVVM.Model.Wizards"
                    xmlns:catel="http://schemas.catelproject.com"
                    xmlns:hc="https://handyorg.github.io/handycontrol"
                    Loaded="UserControl_Loaded">
