--- a/WolvenKit/MVVM/Views/Shell/HomePage/Pages/AboutPageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/HomePage/Pages/AboutPageView.xaml
@@ -148,7 +148,7 @@
                                     <LineBreak></LineBreak>
                                     <LineBreak></LineBreak>
 
-                                    This program is being created to extend mod support for games made by CD Projekt Red on their proprietary REDEngine™, namely The Witcher 3 and Cyberpunk 2077.
+                                    This program is being created to extend mod support for games made by CD Projekt Red on their proprietary REDEngine, namely The Witcher 3 and Cyberpunk 2077.
                                     <LineBreak></LineBreak>
                                     <LineBreak></LineBreak>
 
