--- a/WolvenKit/MVVM/Views/Shell/Backstage/BackStageView.xaml
+++ b/WolvenKit/MVVM/Views/Shell/Backstage/BackStageView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:WolvenKit.Views" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:Fluent="urn:fluent-ribbon" xmlns:catel="http://schemas.catelproject.com"
+              xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:Fluent="urn:fluent-ribbon" xmlns:catel="http://schemas.catelproject.com"
              mc:Ignorable="d"                                xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options" xmlns:local1="clr-namespace:WolvenKit.MVVM.Views.Shell.Backstage"
              d:DesignHeight="450" d:DesignWidth="800">
 
